--- a/Client_App/Views/Controls/SelectReportPopup.axaml
+++ b/Client_App/Views/Controls/SelectReportPopup.axaml
@@ -3,25 +3,24 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Client_App.Controls.SelectReportPopup">
+             x:Class="Client_App.Views.Controls.SelectReportPopup">
 	<StackPanel>
 
 	<Button Command="{Binding SwitchNextReportCommand}"
-			Grid.Row="0"
 			VerticalContentAlignment="Center"
 			Height="75"
 			FontSize="48"
 			Content="🠕"/>
 		
-	<Button  Name="ToggleButton" 
-			 Content="Выбрать отчет" 
-			 Command="{Binding OpenPopupCommand}">
+	<Button Name="ToggleButton" 
+			Content="Выбрать отчет" 
+			Command="{Binding OpenPopupCommand}">
 	</Button>
 	<Popup Name="PartPopup"
-			IsOpen="{Binding PopupIsOpen, Mode=TwoWay}"
-			PlacementTarget="{Binding ElementName=ToggleButton}"
-			PlacementMode="Right"
-			IsLightDismissEnabled="True">
+           IsOpen="{Binding PopupIsOpen, Mode=TwoWay}"
+           PlacementTarget="{Binding ElementName=ToggleButton}"
+           PlacementMode="Right"
+           IsLightDismissEnabled="True">
 		<Border Background="White"
                 BorderBrush="Gray"
                 BorderThickness="1"
@@ -30,30 +29,29 @@
 			<StackPanel>
 				<TextBlock Text="Выбор отчета"/>
 				<ListBox Items="{Binding ReportCollection}"
-					 SelectedItem="{Binding SelectedReport, Mode=TwoWay}"
-						SelectionChanged="ListBox_SelectionChanged"
-						 SelectionMode="Single">
+                         SelectedItem="{Binding SelectedReport, Mode=TwoWay}"
+                         SelectionChanged="ListBox_SelectionChanged"
+                         SelectionMode="Single">
 					<ListBox.ItemTemplate>
 						<DataTemplate>
-								<TextBlock Height="20" Grid.Column="0">
-									<TextBlock.Text>
-										<MultiBinding StringFormat="{}{0} - {1}">
-											<Binding Path="StartPeriod.Value"/>
-											<Binding Path="EndPeriod.Value"/>
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
+							<TextBlock Height="20">
+								<TextBlock.Text>
+									<MultiBinding StringFormat="{}{0} - {1}">
+										<Binding Path="StartPeriod.Value"/>
+										<Binding Path="EndPeriod.Value"/>
+									</MultiBinding>
+								</TextBlock.Text>
+							</TextBlock>
 						</DataTemplate>
 					</ListBox.ItemTemplate>
 				</ListBox>
 			</StackPanel>
 		</Border>
 	</Popup>
-	<Button Command="{Binding SwitchPreviousReportCommand}"
-		Grid.Row="2"
-		VerticalContentAlignment="Center"
-		Height="75"
-		FontSize="48"
-		Content="🠗"/>
-	</StackPanel>
+    <Button Command="{Binding SwitchPreviousReportCommand}"
+            VerticalContentAlignment="Center"
+            Height="75"
+            FontSize="48"
+            Content="🠗"/>
+    </StackPanel>
 </UserControl>
