--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -95,8 +95,7 @@
 								   Grid.Column="0"
 								   Margin="5"
 								   Text="ФИО исполнителя:"/>
-						<TextBox Classes="autoTrim"
-								 Grid.Row="0"
+						<TextBox Grid.Row="0"
 								 Grid.Column="1"
 								 Margin="5"
 								 Text="{Binding Path=Report.FIOexecutor.Value}">
@@ -105,8 +104,7 @@
 								   Grid.Column="0"
 								   Margin="5"
 								   Text="Должность:"/>
-						<TextBox Classes="autoTrim"
-								 Grid.Row="1"
+						<TextBox Grid.Row="1"
 								 Grid.Column="1"
 								 Margin="5"
 								Text="{Binding Path=Report.GradeExecutor.Value}"/>
@@ -114,18 +112,15 @@
 								   Grid.Column="0"
 								   Margin="5"
 								   Text="Телефон:"/>
-						<TextBox Classes="autoTrim"
-								 Grid.Row="2"
+						<TextBox Grid.Row="2"
 								 Grid.Column="1"
 								 Margin="5"
 								 Text="{Binding Path=Report.ExecPhone.Value}"/>
-						<TextBlock Classes="autoTrim"
-								   Grid.Row="3"
+						<TextBlock Grid.Row="3"
 								   Grid.Column="0"
 								   Margin="5"
 								   Text="Электронная почта:"/>
-						<TextBox Classes="autoTrim"
-								 Grid.Row="3"
+						<TextBox Grid.Row="3"
 								 Grid.Column="1"
 								 Margin="5"
 								 Text="{Binding Path=Report.ExecEmail.Value}"/>
