--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -221,19 +221,24 @@
         <Style Selector="DataGrid.notesTable">
             <Setter Property="CornerRadius" Value="5"/>
             <Setter Property="Width" Value="660"/>
-            <Setter Property="MaxHeight" Value="180"/>
+            <Setter Property="MaxHeight" Value="210"/>
+			<Setter Property="Height" Value="210"/>
 			<Setter Property="ColumnHeaderHeight" Value="25"/>
-			<Setter Property="RowHeight" Value="35" />
             <Setter Property="RowBackground" Value="White"/>
+			<Setter Property="Background" Value="LightGray"/>
 			<Setter Property="SelectionMode" Value="Extended"/>
             <Setter Property="AlternatingRowBackground" Value="White"/>
             <Setter Property="Margin" Value="5"/>
 			<Setter Property="GridLinesVisibility" Value="All"></Setter>
+			<Setter Property="HorizontalScrollBarVisibility" Value="Hidden"></Setter>
         </Style>
 		
 		<Style Selector="DataGrid.notesTable TextBox">
 			<Setter Property="BorderThickness" Value="0.5"/>
 			<Setter Property="Margin" Value="0,0,0,0"/>
+			<Setter Property="MinHeight" Value="25"/>
+			<Setter Property="MaxHeight" Value="100"/>
+			<Setter Property="TextWrapping" Value="Wrap"/>
 			<Setter Property="VerticalContentAlignment" Value="Center"/>
 			<Setter Property="IsHitTestVisible" Value="False"/>
 		</Style>
