--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -148,7 +148,7 @@
 		</Expander>
 
 		<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
-            <Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="*">
+            <Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
                 <Grid.ContextMenu>
                     <ContextMenu x:CompileBindings="True"
                                  x:DataType="vm:Form_11VM"
@@ -321,13 +321,8 @@
 					Classes="table"
 					x:CompileBindings="True"
 					x:Name="dataGrid"
-					CanUserSortColumns="True"
-					CanUserReorderColumns="False"
 					Items="{Binding FormList}"
-					SelectedItem="{Binding SelectedForm}"
-					VerticalScrollBarVisibility="Hidden"
-					HorizontalScrollBarVisibility="Auto"
-					RowHeight="30">
+					SelectedItem="{Binding SelectedForm}">
 
                     <interactivity:Interaction.Behaviors>
                         <local:DataGridDragSelectionBehavior/>
