--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -1,4 +1,4 @@
-<Window
+﻿<Window
     x:Class="Client_App.Views.Forms.Forms1.Form_11"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,6 +10,7 @@
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
     xmlns:forms1="clr-namespace:Models.Forms.Form1;assembly=Models"
     xmlns:forms="clr-namespace:Models.Forms;assembly=Models"
+    xmlns:dbRealization="clr-namespace:Models.DBRealization;assembly=Models"
     Title="{Binding WindowTitle}"
     d:DesignHeight="450"
     d:DesignWidth="900"
@@ -207,23 +208,28 @@
                         <MenuItem Header="Скопировать в буфер имя паспорта"
                                   Command="{Binding CopyPasName}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+U"/>
+                                  InputGesture="Ctrl+U"
+                                  IsVisible="{Binding OnlyOneRowSelected}"/>
                         <MenuItem Header="Открыть паспорт"
                                   Command="{Binding OpenPas}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+P"/>
+                                  InputGesture="Ctrl+P"
+                                  IsVisible="{Binding OnlyOneRowSelected}"/>
                         <MenuItem Header="Выгрузка истории движения источника"
                                   Command="{Binding ExcelExportSourceMovementHistory}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+E"/>
+                                  InputGesture="Ctrl+E"
+                                  IsVisible="{Binding OnlyOneRowSelected}"/>
                         <MenuItem Header="Рассчитать категорию"
                                   Command="{Binding CategoryCalculationFromReport}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+Y"/>
+                                  InputGesture="Ctrl+Y"
+                                  IsVisible="{Binding OnlyOneRowSelected}"/>
                         <MenuItem Header="Перевести РВ в РАО"
 								  Command="{Binding SourceTransmission}"
 								  CommandParameter="{Binding SelectedForm}"
-                                  InputGesture="Ctrl+J"/>
+                                  InputGesture="Ctrl+J"
+                                  IsVisible="{Binding OnlyOneRowSelected}"/>
                     </ContextMenu>
                 </Grid.ContextMenu>
                 <Grid Classes="tableHeader" Grid.Row="0"
@@ -350,6 +356,7 @@
                         <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
                         <local:DataGridDoubleClickBehavior/>
                         <local:DeselectDataGridOnClickOutsideBehavior/>
+                        <local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
                     </interactivity:Interaction.Behaviors>
 
                     <DataGrid.Columns>
