context menu commands visibility

--- a/Client_App/Views/Forms/Forms1/Form_13.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_13.axaml
@@ -200,7 +200,8 @@
                                   InputGesture="Ctrl+K"/>
                         <MenuItem Header="Перевести РВ в РАО"
                                   Command="{Binding SourceTransmission}"
-                                  CommandParameter="{Binding SelectedForm}"/>
+                                  CommandParameter="{Binding SelectedForm}"
+                                  IsVisible="{Binding OnlyOneRowSelected}"/>
                     </ContextMenu>
 				</Grid.ContextMenu>
 				<Grid Classes="tableHeader" Grid.Row="0"
