--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -198,7 +198,8 @@
                         <MenuItem Header="Выгрузка истории движения источника"
                                   Command="{Binding ExcelExportSourceMovementHistory}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+E"/>
+                                  InputGesture="Ctrl+E"
+                                  IsVisible="{Binding OnlyOneRowSelected}"/>
                     </ContextMenu>
 				</Grid.ContextMenu>
 				<Grid Classes="tableHeader" Grid.Row="0"
